// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blog page renders correctly 1`] = `
<div>
  <div
    class="layout-container"
  >
    <nav
      aria-label="Primary"
      class="nav"
    >
      <div
        class="nav__container"
      >
        <div
          class="nav__startwrapper"
        >
          <a
            aria-label="Homepage"
            href="/"
          >
            <div
              class="logo"
            >
              <svg
                class="nav__logo light-mode-only"
              />
              <svg
                class="nav__logo dark-mode-only"
              />
            </div>
          </a>
        </div>
        <ul
          class="nav__tabs__container"
        >
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/learn"
            >
              Learn
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="https://nodejs.org/en/docs/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Documentation
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/download"
            >
              Download
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/community"
            >
              Community
            </a>
          </li>
        </ul>
        <div
          class="nav__endwrapper"
        >
          <ul
            class="right-container"
          >
            <li
              class="nav__tabs search-bar"
            >
              <span
                class="sr-only"
              >
                Search Bar
              </span>
              <div
                class="searchBarContainer"
                style="min-height: 0em; width: 100%; max-width: 7em; box-shadow: none;"
              >
                <div
                  class="searchInputContainer"
                  role="presentation"
                >
                  <i
                    class="material-icons searchIcon"
                  >
                    travel_explore
                  </i>
                  <label
                    for="searchInput"
                  >
                    <span>
                      Search
                    </span>
                    <input
                      autocomplete="off"
                      class="inputText"
                      id="searchInput"
                      name="query"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
              </div>
            </li>
            <li
              class="nav__tabs"
            >
              <button
                class="dark-mode-toggle"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Toggle Dark Mode
                </span>
                <i
                  class="material-icons light-mode-only theme-buttons"
                >
                  mode_night
                </i>
                <i
                  class="material-icons dark-mode-only theme-buttons"
                >
                  brightness_medium
                </i>
              </button>
            </li>
            <li
              class="nav__tabs"
            >
              <a
                href="https://github.com/nodejs/nodejs.dev"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="sr-only"
                >
                  GitHub
                </span>
                <svg
                  fill="var(--color-text-accent)"
                  style="padding: 1rem; width: 2rem; height: 2rem;"
                />
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <main
      class="grid-container"
    >
      <nav
        class="side-nav-about"
      >
        <button
          class="side-nav__open"
          type="button"
        >
          Menu
        </button>
        <ul
          class="community-nav__list"
        >
          <li
            class="t-body2 side-nav__item--title"
          >
            <b>
              Blog Categories
            </b>
            <i
              class="material-icons"
            >
              arrow_drop_down
            </i>
          </li>
        </ul>
      </nav>
      <div
        class="blog-grid-container"
      >
        <div
          class="blog-category-header"
        >
          <h2>
            Node.js Blog
          </h2>
          <span />
        </div>
      </div>
      <div
        class="blog-grid-container"
      >
        <div
          class="blogCard"
        >
          <a
            class="title"
            href="Mock blog slug"
          >
            Mock blog title
          </a>
          <h4>
            Mock date
          </h4>
          <p>
            by

            <span>
              Mock author name
            </span>
          </p>
        </div>
      </div>
    </div>
    <footer
      class="footer"
    >
      <ul
        class="footer__left"
      >
        <li>
          <a
            class="footer__link"
            href="/about/trademark"
          >
            Trademark Policy
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about/privacy"
          >
            Privacy Policy
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="https://github.com/openjs-foundation/cross-project-council/blob/main/CODE_OF_CONDUCT.md#contributor-covenant-code-of-conduct"
          >
            Code of Conduct
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about/security"
          >
            Security Reporting
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about"
          >
            About
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/blog"
          >
            Blog
          </a>
        </li>
      </ul>
      <ul
        class="footer__right"
      >
        <li>
          © OpenJS Foundation
        </li>
        <li>
          <a
            aria-label="Node.js Github Page Link"
            href="https://github.com/nodejs/node"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="sr-only"
            >
              GitHub
            </span>
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Twitter Link"
            href="https://twitter.com/nodejs"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Slack Link"
            href="https://slack.openjsf.org"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;

exports[`Blog page renders correctly for empty blogs list 1`] = `
<div>
  <div
    class="layout-container"
  >
    <nav
      aria-label="Primary"
      class="nav"
    >
      <div
        class="nav__container"
      >
        <div
          class="nav__startwrapper"
        >
          <a
            aria-label="Homepage"
            href="/"
          >
            <div
              class="logo"
            >
              <svg
                class="nav__logo light-mode-only"
              />
              <svg
                class="nav__logo dark-mode-only"
              />
            </div>
          </a>
        </div>
        <ul
          class="nav__tabs__container"
        >
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/learn"
            >
              Learn
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="https://nodejs.org/en/docs/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Documentation
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/download"
            >
              Download
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/community"
            >
              Community
            </a>
          </li>
        </ul>
        <div
          class="nav__endwrapper"
        >
          <ul
            class="right-container"
          >
            <li
              class="nav__tabs search-bar"
            >
              <span
                class="sr-only"
              >
                Search Bar
              </span>
              <div
                class="searchBarContainer"
                style="min-height: 0em; width: 100%; max-width: 7em; box-shadow: none;"
              >
                <div
                  class="searchInputContainer"
                  role="presentation"
                >
                  <i
                    class="material-icons searchIcon"
                  >
                    travel_explore
                  </i>
                  <label
                    for="searchInput"
                  >
                    <span>
                      Search
                    </span>
                    <input
                      autocomplete="off"
                      class="inputText"
                      id="searchInput"
                      name="query"
                      type="text"
                      value=""
                    />
                  </label>
                </div>
              </div>
            </li>
            <li
              class="nav__tabs"
            >
              <button
                class="dark-mode-toggle"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Toggle Dark Mode
                </span>
                <i
                  class="material-icons light-mode-only theme-buttons"
                >
                  mode_night
                </i>
                <i
                  class="material-icons dark-mode-only theme-buttons"
                >
                  brightness_medium
                </i>
              </button>
            </li>
            <li
              class="nav__tabs"
            >
              <a
                href="https://github.com/nodejs/nodejs.dev"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="sr-only"
                >
                  GitHub
                </span>
                <svg
                  fill="var(--color-text-accent)"
                  style="padding: 1rem; width: 2rem; height: 2rem;"
                />
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <main
      class="grid-container"
    >
      <nav
        class="side-nav-about"
      >
        <button
          class="side-nav__open"
          type="button"
        >
          Menu
        </button>
        <ul
          class="community-nav__list"
        >
          <li
            class="t-body2 side-nav__item--title"
          >
            <b>
              Blog Categories
            </b>
            <i
              class="material-icons"
            >
              arrow_drop_down
            </i>
          </li>
        </ul>
      </nav>
      <div
        class="blog-grid-container"
      >
        <div
          class="blog-category-header"
        >
          <h2>
            Node.js Blog
          </h2>
          <span>
            The latest Node.js news, case studies, tutorials, and resources.
          </span>
        </div>
        <div
          class="blog-items"
        />
      </div>
    </main>
    <footer
      class="footer"
    >
      <ul
        class="footer__left"
      >
        <li>
          <a
            class="footer__link"
            href="/about/trademark"
          >
            Trademark Policy
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about/privacy"
          >
            Privacy Policy
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="https://github.com/openjs-foundation/cross-project-council/blob/main/CODE_OF_CONDUCT.md#contributor-covenant-code-of-conduct"
          >
            Code of Conduct
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about/security"
          >
            Security Reporting
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about"
          >
            About
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/blog"
          >
            Blog
          </a>
        </li>
      </ul>
      <ul
        class="footer__right"
      >
        <li>
          © OpenJS Foundation
        </li>
        <li>
          <a
            aria-label="Node.js Github Page Link"
            href="https://github.com/nodejs/node"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="sr-only"
            >
              GitHub
            </span>
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Twitter Link"
            href="https://twitter.com/nodejs"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Slack Link"
            href="https://slack.openjsf.org"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;
